# unittest-compute_array_sum

./: CMakeLists.txt
compute_array_sum/: compute_array_sum.cpp  compute_array_sum.hpp
